--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,8 +3,8 @@ dependencies: []
 galaxy_info:
   author: tkimball83
   description: RHEL/CentOS - Set local environment variables
-  license: BSD
-  min_ansible_version: 2.0
+  license: GPLv3
+  min_ansible_version: 2.4
   platforms:
     - name: Amazon
       versions:
@@ -13,7 +13,7 @@ galaxy_info:
       versions:
         - all
     - name: EL
-      versions: 
+      versions:
         - all
     - name: Fedora
       versions:
@@ -25,3 +25,4 @@ galaxy_info:
     - hostname
     - setenv
     - system
+...
