Change: Add role_name to meta per galaxy 3.0

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 dependencies: []
 galaxy_info:
+  role_name: setenv
   author: tkimball83
   description: RHEL/CentOS - Set local environment variables
   license: GPLv3
